# TARV

./: .gitignore  AGENTS.md  CAN_FUZZING_LITERATURE_REVIEW.md  MightyPPL_CODE_ANALYSIS.md  README.md
MightyPPL/: BddFixpoint.cpp  BddFixpoint.h  BddRuntimeMonitor.cpp  BddRuntimeMonitor.h  CMakeLists.txt  MightyPPL.cpp  MightyPPL.h  MightyPPLMonitor.cpp  MightyPPLMonitor.h  MightyPPLState.cpp  TAwithBDDEdges.cpp  TAwithBDDEdges.h  main.cpp  mitppl-monitor-bench.cpp  mitppl-monitor.cpp
MightyPPL/benchmarks/: demo_property_cards.json  main_study_property_cards_initial.json  monitaal_gear_control_mitl.md  profuzzbench_campaigns.json
MightyPPL/docs/: bizonefuzzpp_architecture.md  main_study_property_cards_initial.md  main_study_property_cards_review.md  profuzzbench_overlay.md  property_cards.md  rvem_schema.md  stage_readiness_snapshot.md
MightyPPL/scripts/: bizone_profuzzbench.py  bizone_profuzzbench_stage_audit.py  property_card_tools.py  retry_command.py  run_aflnet_bizone_ablation_matrix_smoke.py  run_aflnet_bizone_smoke.py  run_monitaal_benchmark_correctness.py  run_monitor_feedback_smoke.py  run_native_bdd_runtime_benchmark.py  run_profuzzbench_overlay_smoke.py  run_profuzzbench_stage_audit_smoke.py  run_property_card_review_smoke.py  rvem_tools.py
MightyPPL/testcases/: test.mitl
MoniTAal/: CMakeLists.txt
MoniTAal/src/monitaal/: CMakeLists.txt  Monitor.cpp  Monitor.h  TA.cpp  TA.h  state.cpp  state.h  symbolic_state_base.cpp  symbolic_state_base.h
MoniTAal/test/: Monitor_test.cpp
aflnet/: afl-fuzz.c  aflnet.c  aflnet.h
aflnet/llvm_mode/: Makefile  afl-clang-fast.c  afl-llvm-pass.so.cc
aflnet/tutorials/mockdicom/: mock_dicom_server.c
aflnet/tutorials/mockdtls/: mock_dtls12_server.c
aflnet/tutorials/mockftp/: mock_ftp_server.c
aflnet/tutorials/mockftp/in-ftp-reset/: ftp_requests_reset.raw
aflnet/tutorials/mockftp/in-ftp-timeout/: ftp_requests_timeout.raw
aflnet/tutorials/mockrtsp/: mock_rtsp_server.c
aflnet/tutorials/mocksip/: mock_sip_server.c
aflnet/tutorials/mocksip/in-sip/: sip_invite_dialog.raw
aflnet/tutorials/mockssh/: mock_ssh_server.c
profuzzbench/subjects/FTP/LightFTP/: Dockerfile
profuzzbench/subjects/RTSP/Live555/: Dockerfile-bizone-aflnet  run-bizone-aflnet.sh
